--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
       <input type="text" placeholder="TODOを追加" id="add_text" />
       <button id="add_button">追加</button>
     </div>
-    <div class="imcomplete_area">
+    <div class="incomplete_area">
       <p class="title">未完了のTODO</p>
-      <ul id="imcomplete_list">
+      <ul id="incomplete_list">
+        <!-- <li>
           <div class="list_row">
             <p>卵を買って帰る</p>
             <button>完了</button>
             <button>削除</button>
           </div>
-        </li>
+        </li> -->
       </ul>
     </div>
     <div class="complete_area">
       <p class="title">完了したTODO</p>
       <ul id="complete_list">
-        <li>
+        <!-- <li>
           <div class="list_row">
             <p>公共料金を支払う</p>
             <button>戻す</button>
           </div>
-        </li>
+        </li> -->
       </ul>
     </div>
   </body>
